apps/production/searxng/ingressConfig.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.lan.vandelocht.uk`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
      middlewares:
        - name: svc-searxng-headers
  tls:
    secretName: searxng-lan-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-searxng-headers
  namespace: searxng
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
